# irc_python_repl

./: .env.example  Dockerfile  bot.py  compose.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  start.sh
