[project]
name = ""
version = "0.0.1"
requires-python = ">=3.11,<3.13"
dependencies = [
    "re-ircbot==2.0.17-dev",
    "multiprocess==0.70.14",
    "pathos==0.3.0",
    "restrictedpython==6.0",
    "requests==2.28.1",
    "validators==0.20.0",
    "numpy==2.3.2",
    "python-dotenv>=1.1.1",
]

[tool.uv]
package = false
